--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ env:
 before_install:
   - if [ "$CXX" == "clang++" ]; then export CXX="clang++" && bii cpp:build; fi
   - if [ "$CXX" == "g++" ];     then export CXX="g++"     && bii cpp:build; fi
-  - if [ "$TRAVIS_OS_NAME" == "linux" ]; sudo apt-get -y install libxml2-dev fi
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get -y install libxml2-dev fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -qq g++-$GCC_VERSION; fi
 
 script:
-  - make clean && make all
+  - if [ "$TRAVIS_OS_NAME" == "linux" ]; then make clean && make all fi
 
 addons:
   apt:
