--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,14 @@ compiler:
 os:
   - linux
 
-env:
-  matrix:
-    - CXX		    := g++
-    - CXX_FLAGS := -Wall -Wextra -std=c++11 -ggdb
-
 before_install:
-  - if [ "$CXX" == "clang++" ]; then export CXX="clang++" && bii cpp:build; fi
-  - if [ "$CXX" == "g++" ];     then export CXX="g++"     && bii cpp:build; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get -y install libxml2-dev fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get update -qq; fi
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then sudo apt-get install -qq g++-$GCC_VERSION; fi
 
 script:
   - if [ "$TRAVIS_OS_NAME" == "linux" ]; then make clean && make all fi
+  - ./bin/main.out
 
 addons:
   apt:
